[package]
name = "milestones"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
action = { workspace = true }
config = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
octocrab = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }

[dev-dependencies]
