[package]
name = "verify-pr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
action = { workspace = true }
pr = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }